@@ -134,6 +134,9 @@
     <Compile Include="ProgramEnvironment.cs" />
     <Compile Include="programVerbosity.cs" />
     <Compile Include="MiniZinc\ZincTypeInstExpressionArray.cs" />
+    <Compile Include="MiniZinc\Boxes\ZincTieTiesBoxBase.cs" />
+    <Compile Include="MiniZinc\Boxes\IZincTieTiesBox.cs" />
+    <Compile Include="MiniZinc\Boxes\IZincTiesBox.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
