@@ -1,5 +1,13 @@
 2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>
 
+	* IZincTiesBox.cs:
+	* ZincTieBoxBase.cs:
+	* IZincTieTiesBox.cs:
+	* ZincIdTieBoxBase.cs:
+	* ZincTieTiesBoxBase.cs: 
+
+2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>
+
 	* ZincExIdBoxBase.cs:
 	* ZincIdTieBoxBase.cs:
 	* ZincAsExTiaBoxBase.cs: 
