@@ -4,6 +4,10 @@
 
 2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>
 
+	* ZincTypeInstExpressionArray.cs: 
+
+2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>
+
 	* ZincData.cs:
 	* ZincIdent.cs:
 	* ZincModel.cs:
